luci-theme-openwrt-2020: fix font issue when mixing latin and non-latin symbols
The GalanoGrotesque font used by the openwrt2020 theme does not support non-
latin symbols.

If latin and non-latin symbols are used together in one line it looks strange
because for latin symbols GalanoGrotesque is used but for non-latin symbols a
fallback font is used (sans-serif).

This patch changes default font to Helvetica for the "bg", "ru", "uk", "el"
and "he" locales.

Original patch was written by Jo-Philipp Wich

Fixes: #5580
[reword commit message, drop "de" from exception list]

--- a/themes/luci-theme-openwrt-2020/htdocs/luci-static/openwrt2020/cascade.css
+++ b/themes/luci-theme-openwrt-2020/htdocs/luci-static/openwrt2020/cascade.css
@@ -15,6 +15,10 @@
  	src: url("GalanoGrotesqueW00-Regular.woff2") format("woff2");
 }
 
+:root[lang="bg"], :root[lang="ru"], :root[lang="uk"], :root[lang="el"], :root[lang="he"] {
+	--regular-font: "Helvetica";
+}
+
 /*
  * resets and base style
  */
